# talaria-agent

./: .gitignore  pyproject.toml
.beads/: issues.jsonl
.github/workflows/: ci.yml  create-release.yml  quality.yml  release.yml
docs/: IMPLEMENTATION_PLAN.md
docs/designs/: 2026-03-07-phase-1-foundation.md
docs/plans/: 2026-03-07-phase-1-foundation.md
talaria/talaria-agent/: pyproject.toml
talaria/talaria-core/: pyproject.toml
talaria/talaria-core/src/talaria/: __init__.py
talaria/talaria-core/tests/: test_core.py
